--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   class="container vh-100 m-auto d-flex bg-primary flex-column align-items-center shadow p-3 mb-5 bg-white rounded border">
   <h1 class="bg-primarydisplay-4">Calculator</h1>
   <div id="output" class="display bg-light col-4"></div>
-  <section class="container row justify-content-center">
-    <div class="col-3  d-flex flex-wrap p-0">
+  <section class="container row justify-content-center m-auto">
+    <div class="col-4  d-flex flex-wrap p-0">
       <button class="number bg-light">1</button>
       <button class="number bg-light">2</button>
       <button class="number bg-light">3</button>
