--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 
-<body
-  class="container vh-100 m-auto d-flex bg-primary flex-column align-items-center shadow p-3 mb-5 bg-white rounded border">
+<body class="container vh-100 m-auto d-flex bg-primary flex-column align-items-center shadow p-3 mb-5 col-12 rounded border col-8">
   <h1 class="bg-primarydisplay-4">Calculator</h1>
   <div id="output" class="display bg-light col-4"></div>
-  <section class="container row justify-content-center m-auto">
+  <section class="container row justify-content-center mt-0">
     <div class="col-4  d-flex flex-wrap p-0">
       <button class="number bg-light">1</button>
       <button class="number bg-light">2</button>
